# swifey-contract

./: Anchor.toml  calc_bonding.py  id.json  package-lock.json  package.json  program-keypair.json  test.py  tsconfig.json
app/fe/: package-lock.json  package.json
app/fe/app/: globals.css  layout.tsx  page.tsx
app/fe/app/launch/: page.tsx
app/fe/app/swap/: page.tsx
app/fe/app/swap/[...tokenMint]/: page.tsx
app/fe/components/: appbar.tsx  configureProgram.tsx  providers.tsx  tokenLaunch.tsx  tokenList.tsx  tokenSwap.tsx  walletProvider.tsx
app/fe/hooks/: useSwifey.ts
app/fe/utils/: constants.ts  swifey.json  swifey.ts
programs/swifey/: Cargo.toml
programs/swifey/src/: constants.rs  errors.rs  lib.rs
programs/swifey/src/instructions/: configure.rs  launch.rs  migrate.rs  mod.rs  swap.rs
programs/swifey/src/states/: bonding-curve.rs  bonding_curve.rs  config.rs  mod.rs
programs/swifey/src/utils/: calc.rs  events.rs  fixed_math.rs  mod.rs  transfer.rs
tests/: swifey.ts
