[package]
name = "swifey"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.29.0", features = ["init-if-needed"] }
anchor-spl = { version="0.29.0", features = ["metadata"] }
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-amm-v3", features = ["cpi"] }
solana-program = "=2.0.21"
spl-memo = "=4.0.0"
spl-token = "=4.0.0"  